tests/paczka1/small_fuzzy/15952060.err
Error in line 1: EjeGH5bJGK8 S482 91,3
Error in line 3: yELu A702 64,6
Error in line 7: L3kN A702 11,3
Error in line 12: EjeGH5bJGK8 S482 55,3
Error in line 5: yELu A323 40,6
